Updates to the analaysis sidebar to prevent text overflow and errors when loading.

--- a/src/main/webapp/styles/layouts/_all.scss
+++ b/src/main/webapp/styles/layouts/_all.scss
@@ -1,3 +1,7 @@
 html, body {
   height: 100%;
 }
+
+h1, h2, h3, h4, h5, h6 {
+  word-wrap: break-word;
+}
